--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,6 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
